--- a/thesis.tex
+++ b/thesis.tex
@@ -39,6 +39,10 @@
 \usepackage{wrapfig}					% figuren met text die er rond wrapt
 \usepackage{minibox}					% voor randen rond multilijn text
 \usepackage{multirow}
+\usepackage{hyperref}					% weblinks (github)
+
+\usepackage{listings}					% C code
+	
 
 % MFA: zet zoekpad voor figure
 \graphicspath{{fig/}}
@@ -71,6 +75,38 @@
 \newverbcommand{\cverb}
 {\setbox\verbbox\hbox\bgroup}
 {\egroup\colorbox{cverbbg}{\box\verbbox}}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%C code style
+
+\usepackage{xcolor}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+	backgroundcolor=\color{backcolour},   
+	commentstyle=\color{codegreen},
+	keywordstyle=\color{magenta},
+	numberstyle=\tiny\color{codegray},
+	stringstyle=\color{codepurple},
+	basicstyle=\ttfamily\footnotesize,
+	breakatwhitespace=false,         
+	breaklines=true,                 
+	captionpos=b,                    
+	keepspaces=true,                 
+	numbers=left,                    
+	numbersep=5pt,                  
+	showspaces=false,                
+	showstringspaces=false,
+	showtabs=false,                  
+	tabsize=2
+}
+
+\lstset{style=mystyle}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -124,9 +160,10 @@
 
 \academicyear{2019 - 2020}
 
-\promotorA[Co-promoteren]{Ing. Václav \v{S}imek}
-\promotorB[]{Ing. Jonas Lannoo}
-\promotorC[Promotor]{Prof. dr. ir. Davy Pissoort}
+\promotorA[Promotor]{Prof. dr. ir. Davy Pissoort}
+\promotorB[Co-promotor]{Ing. Václav \v{S}imek}
+\promotorC[Begeleider]{Ing. Jonas Lannoo}
+
 
 \begin{document}
 % \selectlanguage{dutch}
