--- a/fiiw.sty
+++ b/fiiw.sty
@@ -247,7 +247,7 @@
 				\ifx \@promotorBname \@empty
 				\else
 					%\item[ ]
-					\item[\@promotorBtype\hfill] \@promotorBname
+					\item[\@promotorBtype:\hfill] \@promotorBname
 				\fi
  				\ifx \@promotorCname \@empty
  				\else 
