--- a/thesis.tex
+++ b/thesis.tex
@@ -140,8 +140,8 @@
 
 %informatie over het eindwerk, de promotor, ...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\opleiding{Elektronica}
-\afdeling{}
+\opleiding{Elektronica-ICT}
+\afdeling{afstudeerrichting Elektronica}
 
 \campus{brugge} %denayer,denayereng,geel,geeleng,gent,ghenteng,groept,groupteng,brugge,brugeseng
 
