fixed ref in clinical appl and changed code fontsize

--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -86,8 +86,6 @@ $$[5' - AGGTCCG - 3']$$
 we can deduce the sequence in the other direction as
 $$[3' - TCCAGGC - 5']$$
 
-//TODO einde zin = punt?
-
 \subsection{DNA in the human body}
 
 In human cells, DNA molecules can be found in the nucleus of all cells in the body. It consists of 46 very long molecules, which during cell division condense in what we call \emph{chromosomes}. The only exception is in reproductive cells (the egg cell and the sperm cell), which only have 23 chromosomes. 
@@ -143,7 +141,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 		%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
 		\centering
 		\includegraphics[width=0.3\linewidth]{background/enzymCopying.png}
-		\caption{The enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases~\cite{}.}
+		\caption{The enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases~\cite{DNAcopy}.}
 		\label{fig:enzymCopying}
 	\end{figure}
 	
