--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -70,6 +70,24 @@
 	pages = {Article ID 752910}
 }
 
+@ARTICLE{niptArtikel, 
+	author = {Joachim Van Keirsbilck and Anne Luccofier},
+	title = {Evolutie van de prenatale screening naar aneuploïdie in het eerste trimester: van leeftijd tot NIPT (Dutch)},
+	journal = {azlink},
+	year = 2015,
+	volume = 3, 
+	pages = {8--9}
+}
+
+@ARTICLE{SWG, 
+	author = {Scheinin, I.},
+	title = {DNA Copy Number Analysis of Fresh and Formalin-Fixed Specimens by Shallow Whole-Genome Sequencing With Identification and Exclusion of Problematic Regions in the Genome Assembly.},
+	journal = {Genome Res.},
+	year = 2014,
+	volume = 24(12), 
+	pages = {2022--32}
+}
+
 @BOOK{NIPT,
 	author = {S. Drury, M. Hill and L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
@@ -119,19 +137,22 @@
 	year = 2019
 }
 
-@MISC{2,
+@MISC{CLCbio,
+	year = {April 2020},
 	organization = {CLCbio},
 	title = {Bioinformatics company},
 	howpublished = {http://www.clccell.com/download.html}
 }
 
-@MISC{3,
+@MISC{Cray,
+	year = {April 2020},
 	organization = {Cray Inc.},
 	title = {Bioinformatics company},
 	howpublished = {https://www.cray.com/}
 }
 
-@MISC{4,
+@MISC{Timelogics,
+	year = {April 2020},
 	organization = {Timelogics},
 	title = {Bioinformatics company},
 	howpublished = {http://www.timelogic.com/}
@@ -146,12 +167,14 @@
 
 
 @MISC{IGV,
+	year = {April 2020},
 	title = {{IGV} download page},
 	howpublished = {http://software.broadinstitute.org/software/igv/}
 }
 
 
-@MISC{11,
+@MISC{NCBI,
+	year = {April 2020},
 	organization = {University of Washington},
 	title = {Genome of coronavirus, {NCBI}},
 	howpublished = {https://www.ncbi.nlm.nih.gov/sra/SRX7852918}
@@ -179,7 +202,8 @@
 }
 
 
-@MISC{8,
+@MISC{Karyotype,
+	year = {April 2020},
 	organization = {wikimedia},
 	title = {Human karyotype},
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
@@ -191,7 +215,8 @@
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP\_chemical\_structure.png/1024px-DAMP\_chemical\_structure.png}
 }
 
-@MISC{11,
+@MISC{Trisomy,
+	year = {April 2020},
 	organization = {anatomybox},
 	title = {Trisomy 21 male}
 	howpublished = {http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
@@ -205,13 +230,15 @@
 }
 
 
-@MISC{10,
+@MISC{Lighterra,
+	year = {April 2020},
 	organization = {Lighterra},
 	title = {Sequential working of microprocessor},
 	howpublished = {http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
 }
 
-@MISC{9,
+@MISC{Galaxy,
+	year = {April 2020},
 	organization = {Galaxy.org},
 	title = {Online bioinformatics tools},
 	howpublished = {https://usegalaxy.org/}
@@ -238,7 +265,22 @@
 @MISC{martinek,
 	title = {Xilinx vivado {HLS}},
 	author = {Tom\'a\vs Mart\'inek},
-	organization = {Brno University of Technology, Faculty of Information Technology
-Božetěchova 2, 612 66 Brno},
+	organization = {Brno University of Technology, Faculty of Information Technology, Božetěchova 2, 612 66 Brno},
 	year = 2020
 }
+
+@MISC{DNAcopy,
+	year = {April 2020},
+	organization = {wikimedia},
+	title = {Copying of DNA},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/DNA\_replication\_split\_horizontal.svg/1024px-DNA\_replication\_split\_horizontal.svg.png}
+}
+
+@MISC{Down,
+	year = {May 2020},
+	organization = {wikipedia},
+	title = {Down syndrome},
+	howpublished = {https://en.wikipedia.org/wiki/Down\_syndrome}
+}
+
+niptArtikel
