--- a/bijlage1.tex
+++ b/bijlage1.tex
@@ -16,6 +16,8 @@ To keep the code manageable, it was split up in multiple files. These files were
 \section{Code}
 %listing all code files
 
+{\setstretch{1.0} %interlinie afstand
+	
 \textbf{PARAMS.h}
 \lstinputlisting[language=C]{sourceCode/PARAMS.h}
 \textbf{TYPES.h}
@@ -78,6 +80,6 @@ To keep the code manageable, it was split up in multiple files. These files were
 \lstinputlisting[language=C]{sourceCode/Alignment/smithWatermanHW.h}
 \textbf{smithWatermanHW.c}
 \lstinputlisting[language=C]{sourceCode/Alignment/impl/smithWatermanHW.c}
-
+} %end line stretch
 
 
