--- a/thesis.tex
+++ b/thesis.tex
@@ -42,6 +42,7 @@
 \usepackage{hyperref}					% weblinks (github)
 
 \usepackage{listings}					% C code
+\usepackage{setspace}					% interlinieafstand instellen
 	
 
 % MFA: zet zoekpad voor figure
@@ -88,6 +89,7 @@
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 
 \lstdefinestyle{mystyle}{
+	basicstyle=\tiny,
 	backgroundcolor=\color{backcolour},   
 	commentstyle=\color{codegreen},
 	keywordstyle=\color{magenta},
@@ -183,7 +185,7 @@
 \input{H2_MBbackground}
 \input{H3_Methods}
 \input{H4_ELbackground}
-\input{H4_InitialDifficulties}
+%\input{H4_InitialDifficulties}
 \input{H5_RMaccelerated}
 \input{H6_implementation}
 %\input{H7_results}
