eerste poging fixen ref

--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -75,7 +75,7 @@ The first phosphate group, at the start of the molecule, connects to the sugar g
 	\label{fig:DNAstructure}
 \end{figure}
 
-These two long chains are linked together by the nitrogen bases via their relatively weak hydrogen bonds, but there can't just be any pair of nitrogen bases. Adenine can only make hydrogen bonds with Thymine. Likewise, Guanine can only bond with Cytosine. These bonded nitrogen bases are called \emph{base paires}.
+These two long chains are linked together by the nitrogen bases via their relatively weak hydrogen bonds, but there can't just be any pair of nitrogen bases. Adenine can only make hydrogen bonds with Thymine. Likewise, Guanine can only bond with Cytosine. These bonded nitrogen bases are called \emph{base pairs}.
 
 It is the order of these bases, which is also called the \emph{sequence}, that allows this DNA to store useful information. In this way, e.g. $AGGTCCATG$ means something completely different as a base sequence than e.g. $TTCCAGATC$.
 
@@ -103,7 +103,7 @@ The 23 chromosome pairs are classified in:
 	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png
 	\centering
 	\includegraphics[width=0.5\linewidth]{background/karyotype.png}
-	\caption{the 46 human chromosomes~\cite{8}.}
+	\caption{the 46 human chromosomes~\cite{Karyotype}.}
 	\label{fig:karyotype}
 \end{figure}
 
@@ -141,7 +141,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 		%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
 		\centering
 		\includegraphics[width=0.3\linewidth]{background/enzymCopying.png}
-		\caption{The enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases~\cite{DNAcopy}.}
+		\caption{The enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases~\cite{fpgaImpl}.}
 		\label{fig:enzymCopying}
 	\end{figure}
 	
@@ -157,7 +157,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 			%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
 			\centering
 			\includegraphics[width=0.5\linewidth]{background/NGS.png}
-			\caption{Sequencing technology used by Illumina attaches a nucleotide with a fluorescent tag to the next base in the read, then it captures a picture to determine the base, and removes the fluorescent tag so a new nucleotide group can bind in the next iteration~\cite{}.}
+			\caption{Sequencing technology used by Illumina attaches a nucleotide with a fluorescent tag to the next base in the read, then it captures a picture to determine the base, and removes the fluorescent tag so a new nucleotide group can bind in the next iteration~\cite{fpgaImpl}.}
 			\label{fig:NGS}
 		\end{figure}
 	\end{enumerate}
