--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -21,7 +21,7 @@ The idea of this thesis was to implement the Smith-Waterman alignment algorithm 
 
 \paragraph{Proposed solution and implementation}
 
-As a starting point, a software implementation was implemented on the ARM processor. After running the software implementation overnight with the unmapped sequences from the coronavirus as a sample set, we obtained a dataset of mapped reads. The reads were also mapped by using the Galaxy online tool~\cite{} and both were imported into the IGV analyzing software for visualisation and comparison, which can be seen in figure~\ref{fig:IGVcomparisonConcl}
+As a starting point, a software implementation was implemented on the ARM processor. After running the software implementation overnight with the unmapped sequences from the coronavirus as a sample set, we obtained a dataset of mapped reads. The reads were also mapped by using the Galaxy online tool~\cite{Galaxy} and both were imported into the IGV analyzing software for visualisation and comparison, which can be seen in figure~\ref{fig:IGVcomparisonConcl}
 
 \begin{figure}[H]
 	\centering
