--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -72,7 +72,7 @@
 
 @ARTICLE{niptArtikel, 
 	author = {Joachim Van Keirsbilck and Anne Luccofier},
-	title = {Evolutie van de prenatale screening naar aneuploïdie in het eerste trimester: van leeftijd tot NIPT (Dutch)},
+	title = {Evolutie van de prenatale screening naar aneuplo\"idie in het eerste trimester: van leeftijd tot NIPT (Dutch)},
 	journal = {azlink},
 	year = 2015,
 	volume = 3, 
@@ -189,6 +189,7 @@
 
 
 @MISC{dna,
+	year = {May 2020},
 	organization = {wikimedia},
 	title = {Double stranded {DNA} with coloured bases},
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
@@ -196,6 +197,7 @@
 
 
 @MISC{dnachemical,
+	year = {March 2020},
 	organization = {wikimedia},
 	title = {{DNA} chemical structure}
 	howpublished = {https://en.wikipedia.org/wiki/DNA}
@@ -210,6 +212,7 @@
 }
 
 @MISC{Nucleotide,
+	year = {April 2020},
 	organization = {wikimedia},
 	title = {Nucleotide chemical structure (modified)},
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP\_chemical\_structure.png/1024px-DAMP\_chemical\_structure.png}
@@ -224,6 +227,7 @@
 
 
 @MISC{fpgacomparison,
+	year = {March 2020},
 	organization = {Microsoft},
 	title = {Azure machine learning FPGA comparison},
 	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
@@ -245,6 +249,7 @@
 }
 
 @MISC{fpgaworkings,
+	year = {April 2020},
 	organization = {loyola},
 	title = {{FPGA} diagram},
 	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA\_diagram.png}
